SeSa: add html and scss

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -50,3 +50,36 @@
     gap: $espaciado;
     grid-template-columns: repeat($columnas, 1fr);
 }
+
+@mixin bgImage($url, $colorDegradado) {
+    background-image: linear-gradient( $colorDegradado 0%, $colorDegradado 100% ), url( $url );
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+}
+
+@mixin iconoBg($url) {
+    background-image: url($url);
+    background-repeat: no-repeat;
+    background-position: 50% 2rem;
+    background-size: 10rem;
+}
+
+@mixin headingBorder( $colorTexto, $colorLinea ) {
+    font-size: 3.6rem;
+    display: inline-block;
+    margin-top: 5rem;
+    color: $colorTexto;
+    @include tablet { 
+        margin-top: 0;
+    }
+    
+    &::after {
+        content: '';
+        background-color: $colorLinea;
+        height: 1rem;
+        width: calc( 100% + 1rem);
+        display: block;
+        margin: -1.4rem 0 0 0;
+    }
+}
