--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -39,6 +39,7 @@ h1, h2, h3 {
 h1 {
     font-size: 4rem;
 }
+
 h3 {
     font-size: 2.8rem;
     text-align: center;
@@ -47,4 +48,10 @@ h3 {
 ul {
     padding: 0;
     list-style: none;
+}
+.seccion {
+    padding: 3rem 0;
+    @include m.tablet { 
+        padding: 8rem 0;
+    }
 }
